Changes related to: 1.Creating phase while creating project